[tool.poetry]
name = "sections"
version = "0.1.0"
description = ""
authors = ["Princekrampah <jsksprince@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.1.6"
langgraph = "^0.0.24"
langchain-openai = "^0.0.5"
python-decouple = "^3.8"
duckduckgo-search = "^4.4"
gradio = "^4.17.0"
beautifulsoup4 = "^4.12.3"
tavily-python = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
